Fix horizontal overflow in preformatted text

--- a/serveranalysisfrontend/src/App.css
+++ b/serveranalysisfrontend/src/App.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  padding: 20px;
+}
+
 #root {
   margin: 0;
   padding: 0px;
